--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ num-complex = ">=0.0.0"
 [dev-dependencies]
 criterion = "0.2"
 
+[[bench]]
+name = "vecops"
+harness = false
 
 [features]
 default = []
