--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "aether_primitives"
 version = "0.1.0"
-authors = ["Felix Girke <razorheadeffect@gmail.com>"]
+authors = ["Felix Girke <felix.girke@tu-dortmund.de>"]
 edition = "2018"
 
 [dependencies]
