Implement fft for vecops

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 num-traits = ">=0.0.0"
 num-complex = ">=0.0.0"
 
-chfft = { optional = true, version = "0.2.4"}
+chfft = { optional = true, version = "0.2.4" }
 
 [dev-dependencies]
 criterion = "0.2"
@@ -21,4 +21,8 @@ harness = false
 
 [features]
 default = []
-fft_chfft = ["chfft"]
+fft_chfft = ["chfft", "fft"]
+
+# enables fft ops on vecops
+fft = []
+
