--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,18 @@
 name = "aether_primitives"
 version = "0.1.0"
 authors = ["Felix Girke <felix.girke@tu-dortmund.de>"]
+keywords = ["sdr","helpers","radio","complex-numbers","signal"]
+description = "Helpers for common SDR and signal generation operations"
+license = "MPL 2.0"
+license-file = "LICENSE"
+repository = "https://github.com/razorheadfx/aether_primitives"
+homepage = "https://github.com/razorheadfx/aether_primitives"
+readme = "README.md"
 edition = "2018"
 
 [dependencies]
 # these are unspecified so whoever wants to use it can specify their 
-# own versio number as cargo will prefer to use that version
+# own version number as cargo will prefer to use that version
 num-traits = ">=0.0.0"
 num-complex = ">=0.0.0"
 
