--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,17 +13,24 @@ edition     = "2018"
 [dependencies]
 # these are unspecified so whoever wants to use it can specify their 
 # own version number as cargo will prefer to use that version
-num-traits       = ">=0.0.0"
+num-traits                  = ">=0.0.0"
 # pull in serialisation for Complex<T>
-num-complex      = { version = ">=0.0.0", features = ["serde"] }
-csv              = "1.0.2"
+num-complex                 = { version = ">=0.0.0", features = ["serde"] }
+csv                         = "1.0.2"
 # f32/f64 equality assertion
-assert_approx_eq = "1.1.0"
-rand             = "0.6.1"
+assert_approx_eq            = "1.1.0"
+rand                        = "0.6.1"
 
 # optional stuff
-chfft            = { optional = true, version = "0.2.4" }
-gnuplot          = { optional = true, version = "0.0.26" }
+chfft                       = { optional = true, version = "0.2.4" }
+gnuplot                     = { optional = true, version = "0.0.26" }
+
+
+# gui stuff
+piston                      = { optional = true, version = "0.40.0" }
+piston2d-graphics           = { optional = true, version = "0.29.0" }
+pistoncore-glutin_window    = { optional = true, version = "0.52.0" }
+piston2d-opengl_graphics    = { optional = true, version = "0.58.0" }
 
 [dev-dependencies]
 criterion        = "0.2"
@@ -36,6 +43,7 @@ harness          = false
 default          = []
 fft_chfft        = ["chfft", "fft"]
 plot             = ["gnuplot"]
+gui               = ["piston", "piston2d-graphics", "pistoncore-glutin_window", "piston2d-opengl_graphics"]
 
 # enables fft ops on vecops
 fft = []
