--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,16 +24,8 @@ rand                        = "0.6"
 # the default fft
 rustfft                     = { optional = true, version = "3.0" }
 
-# gnuplot support
+# gnuplot support for debugging
 gnuplot                     = { optional = true, version = "0.0.26" }
-
-
-# gui stuff
-piston                      = { optional = true, version = "0.40.0" }
-piston2d-graphics           = { optional = true, version = "0.29.0" }
-pistoncore-glutin_window    = { optional = true, version = "0.52.0" }
-piston2d-opengl_graphics    = { optional = true, version = "0.58.0" }
-
 
 [dev-dependencies]
 criterion        = "0.2"
@@ -46,7 +38,6 @@ harness          = false
 default          = ["fft_rustfft"]
 fft_rustfft      = ["rustfft", "fft"]
 plot             = ["gnuplot"]
-gui              = ["piston", "piston2d-graphics", "pistoncore-glutin_window", "piston2d-opengl_graphics"]
 
 # enables fft ops on vecops
 fft = []
